--- a/index.html
+++ b/index.html
@@ -141,14 +141,21 @@
       <source src="files/Pharecon_01_FARBE.mp4" type="video/mp4">
     </video>
 
-    <img id="logo" src="files/bwlogo.png">
-    <p id="seit">
-      <br><strong>
-        Die Life Science-Personalberater.
+    <img id="logo" src="files/logo.png">
+    <p id="seit"><strong>
+        Die Life Science-Personalberater.<br>
         Seit 2004.
       </strong>
-
     </p>
+
+    <div id="green-foot">
+      <div id="mouser-stacks_in_87">
+        <div class="m-wrap  dz-block">
+          <div class="mouser m-mouse">
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 
