--- a/wir-sind-pharecon/index.html
+++ b/wir-sind-pharecon/index.html
@@ -372,7 +372,7 @@ Unsere Kunden helfen Menschen, ihre Gesundheit zu erhalten oder wieder herzustel
 
 <p class='ppro text-inherit        ' draggable="false">
 
-Wir kommen aus dem Life Science Markt und sind spezialisiert auf die Suche von Fach- und F&uuml;hrungskr&auml;ften. Pharecon erfasst aufgrund seiner Expertise und seines Branchen-Know-hows sensibel die Bed&uuml;rfnisse im Markt und hat so sein Leistungsportfolio sukzessive den Anforderungen der Kunden angepasst.<br /><br />Unsere Kunden sch&auml;tzen es, dass wir ihnen als Partner auf Augenh&ouml;he begegnen und sie umfassend beraten. Daher unterstützen wir sie in der Personalsuche und -auswahl, in der Personalentwicklung sowie im Employer Branding. So bieten wir unseren Mandanten und ihren Personalabteilungen einen ganzheitlichen Ansatz und damit einen Mehrwert. Damit bieten wir einen wichtigen <strong>Support f&uuml;r die Personal-Abteilungen</strong> unserer Kunden.
+Wir kommen aus dem Life Science Markt und sind spezialisiert auf die Suche von Fach- und F&uuml;hrungskr&auml;ften. Pharecon erfasst aufgrund seiner Expertise und seines Branchen-Know-hows sensibel die Bed&uuml;rfnisse im Markt und hat so sein Leistungsportfolio sukzessive den Anforderungen der Kunden angepasst.<br /><br />Unsere Kunden sch&auml;tzen es, dass wir ihnen als Partner auf Augenh&ouml;he begegnen und sie umfassend beraten. Daher unterstützen wir sie in der Personalsuche und -auswahl, in der Personalentwicklung sowie im Employer Branding. So bieten wir unseren Mandanten und ihren Personalabteilungen einen ganzheitlichen Ansatz und damit einen Mehrwert.
 
 
 </p>
@@ -1081,7 +1081,7 @@ ANSPRECHPARTNER BEI PHARECON</span><!--
 	<div id="hoverBoxLinkstacks_in_1445" class="hoverBoxLink">
 	
 	
-		<a href="mailto:marlok@pharecon.de " title="Jetzt E-Mail schreiben!"></a>
+		<a href="mailto:buck@pharecon.de " title="Jetzt E-Mail schreiben!"></a>
 	
 	
 	</div>
@@ -1149,7 +1149,7 @@ ANSPRECHPARTNER BEI PHARECON</span><!--
 
 <p class='ppro text-inherit        ' draggable="false">
 
-<span style="color:#00537E;font-weight:bold; ">Heike Buck</span><br />Team- und Projekt-Assistenz<br /><br /><a href="tel:+497309/4263153" title="Telefon - Pharecon">+49 &ndash; 73 09 &ndash; 426 3153</a><br /><a href="mailto:marlok@pharecon.de">marlok@pharecon.de</a><br />
+<span style="color:#00537E;font-weight:bold; ">Heike Buck</span><br />Team- und Projekt-Assistenz<br /><br /><a href="tel:+497309/4263153" title="Telefon - Pharecon">+49 &ndash; 73 09 &ndash; 426 3153</a><br /><a href="mailto:buck@pharecon.de">buck@pharecon.de</a><br />
 
 
 </p>
