actually final commit

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           </div> </div>
 </div>
 
-    <video autoplay muted loop id="bgvideo">
+    <video autoplay muted controls id="bgvideo">
       <source src="files/Pharecon_01_FARBE.mp4" type="video/mp4">
     </video>
 
@@ -270,7 +270,7 @@
 
       </div></div><div id='stacks_out_1112' class='stacks_out'><div id='stacks_in_1112' class='stacks_in com_bigwhiteduck_stacks_magicgellan_s3_marker_stack'><a class="shear-mag " data-magellan-destination="marker" name="marker" id="marker" data-magic-name="My Text" data-magic-hide="" data-magic-inmenu="not-in-menu"  data-magic-icon-set="fa" data-magic-icon="fa-home"  data-magic-font="font-family-text"></a>
 
-      </div></div>></div>  </div>  </div>
+      </div></div></div>  </div>  </div>
 <div        class='container   overflow-hidden   '>  <div class="grid-container">  <div class='grid-x            padding-columns  '> <div class="cell small-12 medium-auto "> <div id='stacks_out_24' class='stacks_out'><div id='stacks_in_24' class='stacks_in com_bigwhiteduck_stacks_paragraphpro_stack'>
 
 
